# EDUSENSEI

./: .replit  app.py  cookies.txt  cookies2.txt  cookies3.txt  integration_example.py  llm_backend_architecture.py  object_storage.py  package-lock.json  package.json  pyproject.toml  replit.md  test_cookies.txt
attached_assets/: G4_eng_1758690663284.json  Pasted-Absolutely-A-classy-color-scheme-is-key-to-achieving-that-modern-and-sophisticated-look-Based-on--1760600990302_1760600990304.txt  Pasted-Build-a-teacher-assistant-app-called-USTAAD-DOST-with-the-following-specifications-Design-Acces-1758649567593_1758649567595.txt  Pasted-COMPLETE-CODE-FIX-IMPLEMENT-ALL-CHANGES-1-FIX-CLASS-CREATION-REMOVE-SUBJECT-javascriptCopyfunc-1759292202497_1759292202498.txt  Pasted-COMPREHENSIVE-APP-TESTING-CHECKLIST-ITERATION-PROMPT-Keep-all-existing-features-unchanged-Only-a-1758782998899_1758782998902.txt  Pasted-Create-a-full-stack-web-application-named-Tutor-s-Assistant-using-Python-The-app-should-have-a-cl-1758526356308_1758526356310.txt  Pasted-FOR-REPLIT-COMPLETE-REBUILD-FROM-SCRATCH-Delete-all-existing-class-student-scoresheet-code-and-re-1759293427594_1759293427595.txt  Pasted-ITERATION-PROMPT-ADD-FORGET-PASSWORD-FUNCTIONALITY-Keep-all-existing-features-unchanged-Only-add-1758783197952_1758783197954.txt  Pasted-ITERATION-PROMPT-ADD-MONTHLY-VIEW-AND-YEARLY-COPY-FUNCTIONALITY-Keep-all-existing-features-unchan-1759169095643_1759169095645.txt  Pasted-ITERATION-PROMPT-ADD-VOICE-INPUT-AND-FILE-UPLOAD-TO-U-DOST-Keep-all-existing-features-unchanged--1758774876607_1758774876613.txt  Pasted-ITERATION-PROMPT-ADD-ZOOM-FUNCTIONALITY-AND-IMPROVE-CALENDAR-DESIGN-Keep-all-existing-features-un-1759169914887_1759169914890.txt  (+30 more)
data/: attendance.json  classes.json  schedule.json  students.json
(+44 files in other folders)
