[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.3.0",
    "docx>=0.2.4",
    "flask>=3.1.2",
    "google-generativeai>=0.8.5",
    "openai>=1.108.1",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
    "pypdf>=6.1.0",
    "python-docx>=1.2.0",
    "python-magic>=0.4.27",
    "reportlab>=4.4.4",
    "requests>=2.32.5",
    "werkzeug>=3.1.3",
]
